# openapi-mcp-server

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
openapi_mcp_server/: __init__.py  main.py  route_maps.py
openapi_mcp_sse/: __init__.py  main.py  route_maps.py
prompts/: 10-create-meta-prompt.md  11-operation-filtering.md  12-server-types.md  13-stdio-mcp-docker.md  14-query-param-auth.md
specs/: README.md
